migrate shift buttons to bs5

--- a/resources/views/pages/user-shifts.html
+++ b/resources/views/pages/user-shifts.html
@@ -11,8 +11,8 @@
                         pattern="^\d{1,2}:\d{2}$" placeholder="HH:MM" maxlength="5" value="%start_time%"
                     >
                     <div class="input-group-btn">
-                        <button class="btn btn-default" title="Now" type="button">
-                            <span class="glyphicon glyphicon-time"></span>
+                        <button class="btn btn-secondary" title="Now" type="button">
+                            <span class="bi bi-clock"></span>
                         </button>
                     </div>
                 </div>
@@ -26,23 +26,23 @@
                         pattern="^\d{1,2}:\d{2}$" placeholder="HH:MM" maxlength="5" value="%end_time%"
                     >
                     <div class="input-group-btn">
-                        <button class="btn btn-default" title="Now" type="button">
-                            <span class="glyphicon glyphicon-time"></span>
+                        <button class="btn btn-secondary" title="Now" type="button">
+                            <span class="bi bi-clock"></span>
                         </button>
                     </div>
                 </div>
             </div>
             <div class="form-group hidden-print" style="margin-top: .5em">
                 <div class="btn-group">
-                    <a href="javascript:setDay(-1)" class="btn btn-default ">%set_yesterday%</a>
-                    <a href="javascript:setDay()" class="btn btn-default ">%set_today%</a>
-                    <a href="javascript:setDay(1)" class="btn btn-default ">%set_tomorrow%</a>
+                    <a href="javascript:setDay(-1)" class="btn btn-secondary ">%set_yesterday%</a>
+                    <a href="javascript:setDay()" class="btn btn-secondary ">%set_today%</a>
+                    <a href="javascript:setDay(1)" class="btn btn-secondary ">%set_tomorrow%</a>
                 </div>
                 <div class="btn-group">
-                    <a href="javascript:setHours(-8)" class="btn btn-default ">%set_last_8h%</a>
-                    <a href="javascript:setHours(-4)" class="btn btn-default ">%set_last_4h%</a>
-                    <a href="javascript:setHours(4)" class="btn btn-default ">%set_next_4h%</a>
-                    <a href="javascript:setHours(8)" class="btn btn-default ">%set_next_8h%</a>
+                    <a href="javascript:setHours(-8)" class="btn btn-secondary ">%set_last_8h%</a>
+                    <a href="javascript:setHours(-4)" class="btn btn-secondary ">%set_last_4h%</a>
+                    <a href="javascript:setHours(4)" class="btn btn-secondary ">%set_next_4h%</a>
+                    <a href="javascript:setHours(8)" class="btn btn-secondary ">%set_next_8h%</a>
                 </div>
             </div>
             <div class="form-group hidden-print" style="margin-top: .5em">
